@@ -1186,6 +1186,14 @@ Some variables function as toggles (On/Off).  Unless otherwise noted 0 is Off an
 </tr>
 <tr>
 	<td width="20%" bgcolor="#ddddff">
+		$g_bug_move_access_level
+	</td>
+	<td width="80%" bgcolor="#ffffff">
+		Allow the specified access level and above to move bugs between projects.
+	</td>
+</tr>
+<tr>
+	<td width="20%" bgcolor="#ddddff">
 		$g_allow_account_delete
 	</td>
 	<td width="80%" bgcolor="#ffffff">
